<resources>
    <string name="app_name">Anekdots 200k</string>
    <string name="initDB">Распаковка БД</string>
    <string name="readCensorDB">Читаем БД цензуры</string>
    <string name="readThemesDB">Читаем БД категорий</string>
    <string name="updateThemesDB">Обновляем данные категорий</string>
    <string name="errorTitle">Возникла ошибочка</string>
    <string name="errorFreeSpace">К сожалению, на накопителе нет достаточно свободного пространства. Необходимо не менее 100МБ для разворачивания базы...</string>
    <string name="title_activity_menu">Выбрать категорию</string>

    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>

    <string name="action_settings">Настройки</string>
    <string name="action_exit">Выход</string>
    <string name="action_mark">Оценить</string>
    <string name="action_share">Поделиться</string>
    <string name="action_chosen">Избранное</string>
    <string name="action_search">Поиск</string>

    <string name="title_exit">Выход</string>
    <string name="text_exit">Закрыть приложение?</string>
    <string name="Yes">Да</string>
    <string name="No">Нет</string>
</resources>
